Fixed overflow

--- a/app/scss/pages/index/interior.scss
+++ b/app/scss/pages/index/interior.scss
@@ -50,10 +50,6 @@
 	}
 
 	&__swiper {
-		@include media-breakpoint-down(xl) {
-			overflow: inherit;
-		}
-
 		padding-right: 15px;
 	}
 
