--- a/app/scss/pages/index/menu.scss
+++ b/app/scss/pages/index/menu.scss
@@ -72,10 +72,6 @@
 	}
 
 	&__swiper {
-		@include media-breakpoint-down(md) {
-			overflow: inherit;
-		}
-
 		padding-right: 15px;
 	}
 
