--- a/app/scss/pages/index/news.scss
+++ b/app/scss/pages/index/news.scss
@@ -35,10 +35,6 @@
 	}
 
 	&__swiper {
-		@include media-breakpoint-down(md) {
-			overflow: inherit;
-		}
-
 		padding-right: 15px;
 	}
 
